@@ -1103,6 +1103,24 @@ FLOAT_T pre_delay_time_table[] =
 	90, 92, 94, 96, 98, 100, 100, 100,
 };
 
+FLOAT_T chorus_delay_time_table[] =
+{
+	0, 0.0125, 0.025, 0.0375, 0.05, 0.0625, 0.075, 0.0875, 
+	0.1, 0.1125, 0.125, 0.1375, 0.15, 0.1625, 0.175, 0.1875, 
+	0.2, 0.2125, 0.225, 0.2375, 0.25, 0.2625, 0.275, 0.2875, 
+	0.3, 0.3125, 0.325, 0.3375, 0.35, 0.3625, 0.375, 0.3875, 
+	0.4, 0.4125, 0.425, 0.4375, 0.45, 0.4625, 0.475, 0.4875, 
+	0.5, 0.5125, 0.525, 0.5375, 0.55, 0.5625, 0.575, 0.5875, 
+	0.6, 0.6125, 0.625, 0.6375, 0.65, 0.6625, 0.675, 0.6875, 
+	0.7, 0.7125, 0.725, 0.7375, 0.75, 0.7625, 0.775, 0.7875, 
+	0.8, 0.8125, 0.825, 0.8375, 0.85, 0.8625, 0.875, 0.8875, 
+	0.9, 0.9125, 0.925, 0.9375, 0.95, 0.9625, 0.975, 0.9875, 
+	1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.2, 3.4, 
+	3.6, 3.8, 4, 4.2, 4.4, 4.6, 4.8, 5, 5.2, 5.4, 5.6, 5.8, 6, 
+	6.2, 6.4, 6.6, 6.8, 7, 7.2, 7.4, 7.6, 7.8, 8, 8.2, 8.4, 8.6, 
+	8.8, 9, 9.2, 9.4, 9.6, 9.8, 10, 10, 10, 
+};
+
 FLOAT_T rate1_table[] =
 {
 	0.05, 0.10, 0.15, 0.20, 0.25, 0.30, 0.35, 0.40, 0.45, 0.50, 0.55, 0.60, 0.65, 0.70, 0.75, 0.80,
